` PlantUML <plantuml.com> State Diagram.
` Generated from src/main/java/io/temporal/internal/statemachines/SideEffectStateMachine.java
` by io.temporal.internal.statemachines.CommandsGeneratePlantUMLStateDiagramsTest.


@startuml
title SideEffect State Transitions

[*] --> CREATED
CREATED --> MARKER_COMMAND_CREATED: SCHEDULE
CREATED --> MARKER_COMMAND_CREATED_REPLAYING: SCHEDULE
MARKER_COMMAND_CREATED --> RESULT_NOTIFIED: RECORD_MARKER
MARKER_COMMAND_CREATED_REPLAYING --> RESULT_NOTIFIED_REPLAYING: RECORD_MARKER
RESULT_NOTIFIED --> MARKER_COMMAND_RECORDED: MARKER_RECORDED
RESULT_NOTIFIED_REPLAYING --> MARKER_COMMAND_RECORDED: MARKER_RECORDED
MARKER_COMMAND_RECORDED --> [*]
center footer Copyright (C) 2020 Temporal Technologies, Inc. All Rights Reserved.
@enduml
